--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "100 days of Cloud blog!",
   "main": "",
   "scripts": {
+    "run": "npm run build:azure",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
